Update HotSwapWorker.java